--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="common-root/lib/gson-2.2.4.jar"/>
-	<classpathentry kind="var" path="common-root"/>
+	<classpathentry exported="true" kind="var" path="common-root"/>
+	<classpathentry kind="var" path="java-server-root/lib/jetty-server-8.1.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
