--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="var" path="common-root/lib/gson-2.2.4.jar"/>
 	<classpathentry exported="true" kind="var" path="common-root"/>
 	<classpathentry kind="var" path="java-server-root/lib/jetty-server-8.1.8.jar"/>
+	<classpathentry kind="var" path="common-root/lib/netty-all-4.0.9.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
